--- a/src/assets/render-maze.html
+++ b/src/assets/render-maze.html
@@ -1,28 +1,43 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.3.1/dist/aframe-environment-component.min.js"></script>
     <script>
+      function makeBox(x,y,z,height,boxSize)
+      {
+        var aBox = document.createElement('a-box');
+                aBox.setAttribute("position", x + " "+ y +" " + z);
+                aBox.setAttribute("scale", boxSize + " " + height + " " + boxSize);
+        return aBox;
+      }
+
+      function makeWallPart(boxSize,col,row,cell)
+      {
+        let x = boxSize * col;
+        let z = boxSize * row;
+        let height = boxSize * cell;
+        let y = ((cell - 1)*boxSize) / 2;
+        return makeBox(x,y,z,height,boxSize);
+      }
+
       AFRAME.registerComponent('render-maze', {
         init: function () 
         {
-          var sceneEl = document.querySelector('a-scene');
+          // load maze data from local storage
           let mazeString = localStorage.getItem("maze");
           let mazeGrid = JSON.parse(mazeString);
-          let boxSize = 0.5;
-          for(let row=0; row<mazeGrid.length; row++)
+          console.log(mazeGrid);
+          
+          var sceneEl = document.querySelector('a-scene');
+          let boxSize = 0.25;
+          for(let row=0; row<=mazeGrid.length; row++)
           {
-            for(let col=0; col<mazeGrid.length; col++)
+            for(let col=0; col<=mazeGrid.length; col++)
             {
-              let cell = mazeGrid[row][col];
+              let cell = mazeGrid[row][col] * 3;
               if(cell > 0)
               {                
-                var aBox = document.createElement('a-box');
-                let x = boxSize * col;
-                let z = boxSize * row;
-                let height = boxSize * cell;
-                let y = ((cell - 1)*boxSize) / 2;
-                aBox.setAttribute("position", x + " "+ y +" " + z);
-                aBox.setAttribute("scale", boxSize + " " + height + " " + boxSize);
+                var aBox = makeWallPart(boxSize,col,row,cell);
                 sceneEl.appendChild(aBox);
               }
             }
@@ -34,6 +49,8 @@
   <body>
     <a-scene>
       <a-entity render-maze></a-entity>
+      <a-entity environment="preset: tron"></a-entity>
+      <a-entity camera look-controls wasd-controls position="1 0 3" rotation="0 0 0"></a-entity>
     </a-scene>
   </body>
 </html>
