feat ( maze2 ) draft 2 of maze maker

--- a/src/assets/render-maze.html
+++ b/src/assets/render-maze.html
@@ -49,8 +49,8 @@
   <body>
     <a-scene>
       <a-entity render-maze></a-entity>
-      <a-entity environment="preset: tron"></a-entity>
-      <a-entity camera look-controls wasd-controls position="1 0 3" rotation="0 0 0"></a-entity>
+      <a-entity environment="preset: japan"></a-entity>
+      <a-entity camera look-controls wasd-controls position="1 0.2 3" rotation="0 0 0"></a-entity>
     </a-scene>
   </body>
 </html>
