--- a/src/assets/render-maze.html
+++ b/src/assets/render-maze.html
@@ -30,10 +30,10 @@
           
           var sceneEl = document.querySelector('a-scene');
           let boxSize = 0.25;
-          for(let row=0; row<=mazeGrid.length; row++)
+          for(let row=0; row<mazeGrid.length; row++)
           {
-            for(let col=0; col<=mazeGrid.length; col++)
-            {
+            for(let col=0; col<mazeGrid.length; col++)
+            {              
               let cell = mazeGrid[row][col] * 3;
               if(cell > 0)
               {                
@@ -49,7 +49,7 @@
   <body>
     <a-scene>
       <a-entity render-maze></a-entity>
-      <a-entity environment="preset: japan"></a-entity>
+      <a-entity environment="preset: tron"></a-entity>
       <a-entity camera look-controls wasd-controls position="1 0.2 3" rotation="0 0 0"></a-entity>
     </a-scene>
   </body>
