--- a/src/assets/render-maze.html
+++ b/src/assets/render-maze.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>    
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.3.1/dist/aframe-environment-component.min.js"></script>
     <script>
       function makeBox(x,y,z,height,boxSize)
       {
@@ -47,8 +48,9 @@
   </head>
   <body>
     <a-scene>
-      <a-entity render-maze></a-entity>      
-      <a-entity camera look-controls wasd-controls position="1 0 3" rotation="0 0 0"></a-entity>
+      <a-entity render-maze></a-entity>
+      <a-entity environment="preset: tron" hide-on-enter-ar></a-entity>
+      <a-entity camera look-controls wasd-controls position="1 0.1 3" rotation="0 0 0"></a-entity>
     </a-scene>
   </body>
 </html>
