--- a/src/assets/render-pix.html
+++ b/src/assets/render-pix.html
@@ -5,41 +5,40 @@
       function makeBox(x,y,z,height,boxSize,cell)
       {
         let colors = ['black', '#065143', '#129490', '#70b77e', '#e0a890','#ce1483'];
-        let color = colors[cell];
         var aBox = document.createElement('a-box');
                 aBox.setAttribute("position", x + " "+ y +" " + z);
                 aBox.setAttribute("scale", boxSize + " " + height + " " + boxSize);
-                aBox.setAttribute("color", color);
+                aBox.setAttribute("color", colors[cell]);
         return aBox;
       }
 
-      function makeWallPart(boxSize,col,row,cell)
+      function makePart(boxSize,col,row,cell)
       {
         let x = boxSize * col;
-        let z = boxSize * row;
-        let height = boxSize * cell;
-        let y = ((cell - 1)*boxSize) / 2;
+        let y = (10*boxSize) - boxSize * row;
+        let z = 0;
+        let height = boxSize;
+        
         return makeBox(x,y,z,height,boxSize,cell);
       }
 
-      AFRAME.registerComponent('render-maze', {
+      AFRAME.registerComponent('render-pix', {
         init: function () 
         {
           // load maze data from local storage
-          let mazeString = localStorage.getItem("maze");
-          let mazeGrid = JSON.parse(mazeString);
-          console.log(mazeGrid);
+          let pixString = localStorage.getItem("pix");
+          let pixGrid = JSON.parse(pixString);          
           
           var sceneEl = document.querySelector('a-scene');
           let boxSize = 0.25;
-          for(let row=0; row<mazeGrid.length; row++)
+          for(let row=0; row<pixGrid.length; row++)
           {
-            for(let col=0; col<mazeGrid.length; col++)
+            for(let col=0; col<pixGrid.length; col++)
             {              
-              let cell = mazeGrid[row][col] * 3;
+              let cell = pixGrid[row][col] * 3;
               if(cell > 0)
               {                
-                var aBox = makeWallPart(boxSize,col,row,cell);
+                var aBox = makePart(boxSize,col,row,cell);
                 sceneEl.appendChild(aBox);
               }
             }
@@ -50,7 +49,7 @@
   </head>
   <body>
     <a-scene>
-      <a-entity render-maze></a-entity>
+      <a-entity render-pix></a-entity>
       <a-sky color="#708090" hide-on-enter-ar></a-sky>      
       <a-entity camera look-controls wasd-controls position="1 0.1 3" rotation="0 0 0"></a-entity>
     </a-scene>
